--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -96,6 +96,14 @@
 
       &._open {
       }
+      .wrapper{
+        display: flex;
+        >a{
+          display: flex;
+          gap:rem(6);
+          align-items: center;
+        }
+      }
     }
   }
 
@@ -114,6 +122,7 @@
       padding: 11px 12px;
       margin-top: 16px;
     }
+
   }
 
   &__subitem {
