--- a/src/styles/careers.scss
+++ b/src/styles/careers.scss
@@ -585,6 +585,9 @@ body {
             padding: 0 rem(35);
             max-width: 100%;
             margin: 0;
+            &:hover {
+              background: #134cb2;
+            }
             &:first-child {
               background: transparent;
               padding: 0;
@@ -667,11 +670,11 @@ body {
 }
 
 .careers-last {
-  margin: rem(90) 0;
+  margin: rem(90) 0 0 0;
   padding: rem(90) 0;
   background: #fff;
   @media (max-width: rem(992)) {
-    margin: rem(90) 0 rem(100) 0;
+    margin: rem(90) 0 0 0;
   }
   &__body {
     display: flex;
@@ -716,20 +719,43 @@ body {
         }
       }
       a {
-        background-color: #0e0e0e;
-        border: 1px solid #0e0e0e;
-        height: rem(50);
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: rem(25);
-        color: #fff;
-        font-size: rem(20);
-        font-weight: 500;
-        line-height: 1.2;
-        text-align: center;
-        padding: 0 rem(35);
         width: fit-content;
+        padding-top: 16px;
+        padding-right: 35px;
+        padding-bottom: 16px;
+        padding-left: 35px;
+        border-radius: 100px;
+        color: #fff;
+        background-color: #000;
+        transition: all 0.3s ease 0s;
+        position: relative;
+
+        svg {
+          opacity: 0;
+          position: absolute;
+          top: 50%;
+          right: 35px;
+          transform: translate(0, -50%);
+          transition: all 0.3s ease 0s;
+
+          circle {
+            fill: #0e0e0e;
+          }
+          path {
+            fill: #fff;
+          }
+        }
+
+        &:hover {
+          padding-right: 78px;
+          background-color: #134cb2;
+          svg {
+            opacity: 1;
+          }
+        }
       }
     }
   }
