--- a/src/styles/cases.scss
+++ b/src/styles/cases.scss
@@ -447,26 +447,43 @@ body {
       }
     }
     a {
-      background-color: #fff;
-      border: 1px solid #fff;
-      height: rem(50);
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: rem(25);
-      color: #0e0e0e;
-      font-size: rem(20);
-      font-weight: 400;
-      line-height: 1.2;
-      text-align: center;
-      padding: 0 rem(70);
       width: fit-content;
-      display: flex;
-      align-items: center;
+      padding-top: 16px;
+      padding-right: 35px;
+      padding-bottom: 16px;
+      padding-left: 35px;
+      border-radius: 100px;
+      color: #000;
+      background-color: #fff;
+      transition: all 0.3s ease 0s;
+      position: relative;
+
+      svg {
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        right: 35px;
+        transform: translate(0, -50%);
+        transition: all 0.3s ease 0s;
+
+        circle {
+          fill: #fff;
+        }
+        path {
+          fill: #000;
+        }
+      }
+
       &:hover {
-        background: #0e0e0e;
-        border-color: #0e0e0e;
+        padding-right: 78px;
+        background-color: #000;
         color: #fff;
+        svg {
+          opacity: 1;
+        }
       }
     }
   }
