--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -41,6 +41,7 @@ body {
       flex-direction: column;
       align-items: flex-start;
       gap: rem(20);
+      margin: rem(20) 0 0 0;
     }
     h2 {
       @include adaptiv-value("font-size", 72, 30, 1);
@@ -125,6 +126,7 @@ body {
     display: none;
     @media (max-width: rem(992)) {
       display: block;
+      width: 100%;
     }
   }
   &__body {
@@ -200,6 +202,9 @@ body {
         }
       }
       .top {
+        img{
+          margin-bottom: rem(20);
+        }
         h3 {
           color: #0e0e0e;
           margin: rem(35) 0 0 0;
