--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -197,8 +197,7 @@
       border: none;
       min-width: rem(300);
       &:hover {
-        color: #0e0e0e;
-        background-color: #fff;
+        background-color: #134cb2;
       }
       @media (max-width: rem(992)) {
         width: 100%;
@@ -233,8 +232,7 @@
     border: none;
     min-width: rem(300);
     &:hover {
-      color: #0e0e0e;
-      background-color: #fff;
+      background-color: #134cb2;
     }
     @media (max-width: rem(992)) {
       width: 100%;
