--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -61,8 +61,22 @@
         }
     }
 
+    &__socials {
+        margin: 40px 0 0 0;
+        display: flex;
+        align-items: center;
+        gap: 24px;
+        svg{
+            width: 45px;
+            height: 45px;
+        }
+    }
+
     &__col-01 {
         width: 40%;
+        display: flex;
+        flex-direction: column;
+        gap:25px;
         @media (max-width: 992px) {
             width: 100%;
         }
@@ -384,12 +398,20 @@
         background-color: #fff;
         padding: 50px 45px;
         border-radius: 15px;
-        margin: 0 0 25px 0;
-
+        flex-grow: 1;
         @media (max-width: 992px) {
             padding: 50px 20px;
             border-radius: 0;
             margin: 0 0 0 0;
+        }
+        >.text{
+            font-weight: 500;
+            font-size: 18px;
+            line-height: normal;
+            margin-top: 80px;
+            @media (max-width: 992px) {
+                margin-top: 40px;
+            }
         }
     }
 
